<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    app:cardCornerRadius="@dimen/corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/todo_exercise_custom_border"
        android:orientation="vertical"
        android:padding="@dimen/padding">


        <ImageView
            android:id="@+id/iv_close"
            android:layout_gravity="end"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/exercise_name_margin_bottom"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/title_size"
            tools:text="@string/title_text" />


        <TextView
            android:id="@+id/text_view_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/title_color"
            android:textSize="@dimen/description_size"
            tools:text="@string/exercise_desc" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:text="3"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/min"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go"
                app:tint="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>