<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerFragment">

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:textSize="70sp"
        tools:text="10:00" />

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progress_countdown"
        style="@style/Widget.MaterialProgressBar.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:minWidth="306dp"
        android:minHeight="306dp" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/startText" />

    <Button
        android:id="@+id/button_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_start"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/pauseText"
        android:visibility="invisible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button_restart"
        android:backgroundTint="#E9EEEF"
        android:textColor="#C751DC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_start"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/restartText"
        android:visibility="invisible"
        tools:visibility="visible" />


</RelativeLayout>